--- a/SmartSales/app/src/main/res/layout/fragment_catalog.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_catalog.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@drawable/bg_consultation">
+
+    <TextView
+        android:id="@+id/send_mail_catalog"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="SEND MAIL"
+        android:textColor="#ffffff"
+        android:textSize="30sp"
+        android:layout_marginLeft="30dp"
+        android:layout_alignParentBottom="true"
+        android:padding="30dp"
+       />
+
 
 
     <com.joanzapata.pdfview.PDFView
+        android:layout_marginTop="70dp"
         android:id="@+id/pdfview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CATALOG"
-        android:id="@+id/textView"
-        android:textSize="30sp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="30dp"/>
+        android:layout_above="@+id/send_mail_catalog"
+        android:background="#000000"/>
+
+
 </RelativeLayout>
