--- a/SmartSales/app/src/main/res/layout/fragment_safety_convenience.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_safety_convenience.xml
@@ -46,7 +46,7 @@
                 android:src="@drawable/btn_conv_normal"
                 android:layout_marginLeft="5dp"
                 android:scaleType="fitXY"
-                android:background="#3f3f3f"
+                android:background="#000000"
                 />
             </LinearLayout>
 
@@ -57,6 +57,7 @@
             android:layout_height="fill_parent"
             android:dividerHeight="8dp"
             android:layout_marginTop="8dp"
+            android:background="#3f3f3f"
                     />
 
         </RelativeLayout>
