--- a/SmartSales/app/src/main/res/layout/activity_nde.xml
+++ b/SmartSales/app/src/main/res/layout/activity_nde.xml
@@ -1,63 +1,99 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ripple="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_consultation"
     tools:context="com.hyundai.teli.smartsales.activities.Home">
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/action_bar_bg"
-        android:id="@+id/view"
         android:layout_toEndOf="@+id/hyundai_bar"
-        android:layout_toRightOf="@+id/hyundai_bar">
+        android:layout_toRightOf="@+id/hyundai_bar"
+        android:background="@drawable/action_bar_bg">
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="60dp"
             android:orientation="horizontal">
 
-            <com.hyundai.teli.smartsales.views.HTextView
-                android:id="@+id/nde_video"
+            <com.andexert.library.RippleView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:text="NDE VIDEO"
-                android:textColor="@android:color/white"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:layout_weight="1"/>
+                ripple:rv_type="doubleRipple">
 
-            <com.hyundai.teli.smartsales.views.HTextView
-                android:id="@+id/nde_dealer_vision"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="DEALER VISION AND MISSION"
-                android:textColor="@android:color/white"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"/>
+                <com.hyundai.teli.smartsales.views.HTextView
+                    android:id="@+id/nde_video"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="NDE VIDEO"
+                    android:textColor="@android:color/white" />
 
-            <com.hyundai.teli.smartsales.views.HTextView
-                android:id="@+id/nde_sales"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="NDE SALES PROCESS"
-                android:textColor="@android:color/white"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"/>
+            </com.andexert.library.RippleView>
 
-            <com.hyundai.teli.smartsales.views.HTextView
-                android:id="@+id/nde_dealership_experience"
+            <com.andexert.library.RippleView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:text="NEW DEALERSHIP EXPERIENCE"
-                android:textColor="@android:color/white"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:layout_weight="1"/>
+                ripple:rv_type="doubleRipple">
+
+                <com.hyundai.teli.smartsales.views.HTextView
+                    android:id="@+id/nde_dealer_vision"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="DEALER VISION AND MISSION"
+                    android:textColor="@android:color/white" />
+
+            </com.andexert.library.RippleView>
+
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                ripple:rv_type="doubleRipple">
+
+                <com.hyundai.teli.smartsales.views.HTextView
+                    android:id="@+id/nde_sales"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="NDE SALES PROCESS"
+                    android:textColor="@android:color/white" />
+
+            </com.andexert.library.RippleView>
+
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                ripple:rv_type="doubleRipple">
+
+                <com.hyundai.teli.smartsales.views.HTextView
+                    android:id="@+id/nde_dealership_experience"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="NEW DEALERSHIP EXPERIENCE"
+                    android:textColor="@android:color/white" />
+
+            </com.andexert.library.RippleView>
 
         </LinearLayout>
 
@@ -65,42 +101,36 @@
 
     <ImageView
         android:id="@+id/catalogueMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/menu_icon"
-        android:layout_alignParentTop="true"
+        android:layout_width="130px"
+        android:layout_height="130px"
+        android:layout_alignBottom="@+id/view"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/view" />
+        android:layout_alignParentTop="true"
+        android:background="@drawable/menu_icon" />
 
     <com.hyundai.teli.smartsales.views.HTextView
         android:id="@+id/hyundai_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NEW DEALERSHIP EXPERIENCE"
-        android:textColor="@android:color/white"
+        android:layout_alignBottom="@+id/catalogueMenu"
+        android:layout_alignParentTop="true"
         android:layout_gravity="center"
+        android:layout_toEndOf="@+id/catalogueMenu"
+        android:layout_toRightOf="@+id/catalogueMenu"
         android:background="@drawable/action_bar_bg"
         android:gravity="center"
-        android:textSize="20sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/catalogueMenu"
-        android:layout_toRightOf="@+id/catalogueMenu"
-        android:layout_toEndOf="@+id/catalogueMenu"
-        android:paddingLeft="15dp"/>
+        android:paddingLeft="15dp"
+        android:text="NEW DEALERSHIP EXPERIENCE"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/catalogueMenu"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </android.support.v4.view.ViewPager>
-
-    <include layout="@layout/menu_layout"/>
-
-
-
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/catalogueMenu"></android.support.v4.view.ViewPager>
 
 </RelativeLayout>
