--- a/SmartSales/app/src/main/res/layout/message_list_item.xml
+++ b/SmartSales/app/src/main/res/layout/message_list_item.xml
@@ -1,69 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="1150dp"
         android:layout_height="40dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
-            android:background="#bdbdbd"
-            />
+            android:background="#bdbdbd" />
+
         <com.hyundai.teli.smartsales.views.HTextView
             android:id="@+id/message_no"
             android:layout_width="150dp"
             android:layout_height="fill_parent"
-            android:text="1"
-            android:textColor="#000000"
             android:gravity="center"
-            />
+            android:text="1"
+            android:textColor="#000000" />
+
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
-            android:background="#bdbdbd"
-            />
+            android:background="#bdbdbd" />
+
         <com.hyundai.teli.smartsales.views.HTextView
             android:id="@+id/message_title"
             android:layout_width="650dp"
             android:layout_height="fill_parent"
+            android:gravity="center"
             android:text="notice"
-            android:textColor="#000000"
-            android:gravity="center"/>
+            android:textColor="#000000" />
+
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
-            android:background="#bdbdbd"
-            />
+            android:background="#bdbdbd" />
+
         <com.hyundai.teli.smartsales.views.HTextView
             android:id="@+id/message_date"
             android:layout_width="200dp"
             android:layout_height="fill_parent"
-            android:text="22-2-2"
-            android:textColor="#000000"
             android:gravity="center"
-            />
+            android:text="22-2-2"
+            android:textColor="#000000" />
+
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
-            android:background="#bdbdbd"
-            />
+            android:background="#bdbdbd" />
+
         <Button
             android:id="@+id/message_view"
             android:layout_width="150dp"
             android:layout_height="fill_parent"
-            android:text="view"
+            android:background="@drawable/btn_view"
+            android:gravity="center"
             android:padding="10dp"
-            android:textColor="#000000"
-            android:gravity="center"/>
+            android:textColor="#000000" />
+
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
-            android:background="#bdbdbd"
-            />
+            android:background="#bdbdbd" />
     </LinearLayout>
 
 </LinearLayout>
