--- a/SmartSales/app/src/main/res/layout/activity_brand_story.xml
+++ b/SmartSales/app/src/main/res/layout/activity_brand_story.xml
@@ -33,7 +33,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignBottom="@+id/view" />
-
+<com.hyundai.teli.smartsales.views.HTextView
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/view"
+    android:layout_centerInParent="true"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/brand_pager"
         android:layout_width="fill_parent"
