--- a/SmartSales/app/src/main/res/layout/fragment_safety_convenience.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_safety_convenience.xml
@@ -35,6 +35,8 @@
                 android:src="@drawable/btn_safety_bg"
                 android:scaleType="fitXY"
                 android:layout_marginRight="5dp"
+                android:background="#000000"
+
                 />
             <!--android:background="#3f3f3f"-->
 
