--- a/SmartSales/app/src/main/res/layout/item_brand_pager.xml
+++ b/SmartSales/app/src/main/res/layout/item_brand_pager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,6 +8,7 @@
 
     <RelativeLayout
         android:id="@+id/brand_rl"
+        android:layout_weight="1"
         android:layout_width="1280px"
         android:layout_height="730px"
         android:layout_marginLeft="80dp"
@@ -21,6 +22,17 @@
             android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
+    <ScrollView
+        android:layout_weight="1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <com.hyundai.teli.smartsales.views.HTextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="hello"/>
+
+        </ScrollView>
 
 
-</RelativeLayout>
+</LinearLayout>
