--- a/SmartSales/app/src/main/res/layout/message_list_item.xml
+++ b/SmartSales/app/src/main/res/layout/message_list_item.xml
@@ -55,13 +55,13 @@
 
         <Button
             android:id="@+id/message_view"
-            android:layout_width="150dp"
+            android:layout_width="148dp"
             android:layout_height="fill_parent"
-            android:background="@drawable/btn_view"
             android:gravity="center"
+            android:text="view"
             android:padding="10dp"
             android:textColor="#000000" />
-
+        <!--android:background="@drawable/btn_view"-->
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
