--- a/SmartSales/app/src/main/res/layout/message_list_item.xml
+++ b/SmartSales/app/src/main/res/layout/message_list_item.xml
@@ -59,8 +59,11 @@
             android:layout_height="fill_parent"
             android:gravity="center"
             android:text="view"
-            android:padding="10dp"
-            android:textColor="#000000" />
+            android:layout_margin="5dp"
+            android:layout_marginRight="10dp"
+            android:textColor="#000000"
+            android:background="@drawable/message_top_gradient"
+            />
         <!--android:background="@drawable/btn_view"-->
         <View
             android:layout_width="1dp"
