--- a/SmartSales/app/src/main/res/layout/ndevideos_pager_item.xml
+++ b/SmartSales/app/src/main/res/layout/ndevideos_pager_item.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/hmc_bg">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg_consultation">
 
     <ImageView
         android:id="@+id/nde_pager_image"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/nde1"
+        android:scaleType="fitXY"
 
         />
 
-    <VideoView
+    <ImageView
         android:id="@+id/nde_pager_video"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:visibility="gone" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/hmc_btn_play"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
