--- a/SmartSales/app/src/main/res/layout/fragment_photo.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_photo.xml
@@ -12,4 +12,12 @@
         android:textSize="30sp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/facebook_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:gravity="center"
+        android:text="Facebook"/>
 </RelativeLayout>
