--- a/SmartSales/app/src/main/res/layout/fragment_specification.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_specification.xml
@@ -5,39 +5,50 @@
     android:layout_height="fill_parent"
     android:background="@drawable/bg_consultation">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/specification_pager"
-        android:layout_width="930dp"
-        android:layout_height="fill_parent"
-        android:isScrollContainer="true" />
+    <WebView
+        android:id="@+id/specification_webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000"/>
+    <ProgressBar
+        android:id="@+id/specBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/specification_pager"-->
+        <!--android:layout_width="930dp"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:isScrollContainer="true" />-->
 
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_toRightOf="@+id/specification_pager"
-        android:id="@+id/relativeLayout">
+    <!--<RelativeLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:layout_toRightOf="@+id/specification_pager"-->
+        <!--android:id="@+id/relativeLayout">-->
 
-        <ImageView
-            android:id="@+id/specification_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#3f3f3f"
-            android:src="@drawable/spec_list_view_top_bar"
-            android:scaleType="fitXY"
-            android:layout_alignParentTop="true" />
+        <!--<ImageView-->
+            <!--android:id="@+id/specification_button"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="#3f3f3f"-->
+            <!--android:src="@drawable/spec_list_view_top_bar"-->
+            <!--android:scaleType="fitXY"-->
+            <!--android:layout_alignParentTop="true" />-->
 
-        <ListView
-            android:id="@+id/specification_list"
-            android:layout_below="@+id/specification_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:dividerHeight="8dp" />
+        <!--<ListView-->
+            <!--android:id="@+id/specification_list"-->
+            <!--android:layout_below="@+id/specification_button"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:dividerHeight="8dp" />-->
 
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 
 
 </RelativeLayout>
